# xmat

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  LICENCE.MIT  README.md  changelog.md  readme.md
cpp/examples/: CMakeLists.txt  common.hpp  example_file.cpp  example_xsocket_client.cpp  example_xsocket_server.cpp  samples_xarr.cpp  samples_xarray.cpp  samples_xdatastream.cpp  samples_xmat.cpp  samples_xmemory.cpp  samples_xmemory_link.cpp  samples_xnetwork_client.cpp  samples_xnetwork_server.cpp  samples_xsocket_client.cpp  samples_xsocket_server.cpp  samples_xstream.cpp  samples_xutil.cpp  samples_xutil_link.cpp  using_file.cpp
cpp/examples/examples_network/: 0_client.cpp  0_server.cpp  1_client.cpp  1_server.cpp  2_client.cpp  2_server.cpp  CMakeLists.txt  description.md
cpp/include/xmat/: xarr.hpp  xarray.hpp  xdatastream.hpp  xformat.hpp  xformat_spec.hpp  xmat.hpp  xmemory.hpp  xnetwork.hpp  xprint.hpp  xserial.hpp  xserialization.hpp  xsocket.hpp  xstream.hpp  xsview.hpp  xutil.hpp
docs/: commands.txt  doxyfile
docs/source/: conf.py  forcpp.rst  formatlab.rst  forpython.rst  index.rst  install.rst  overview.rst
matlab/+xmat/: Block.m  BufByte.m  BugOut.m  ConnectionTCP.m  DStreamByte.m  DStreamFile.m  DStream_.m  DataType.m  Endian.m  Header.m  Input.m  Load.m  MapStreamIn.m  MapStreamOut.m  Output.m  Save.m  StreamBytes.m  StreamFile.m  TCPSocket.m  Util.m  XBlock.m  XHead.m  XUtil.m  byteorder.m
matlab/examples/: BenchMark.m  description.md  example_1_client.m  example_1_server_echo.m  example_1_standard_client_server.m  example_2_xmat_client_echo_server.m  example_2_xmat_client_server.m  example_3_file.m  example_standard_tcp.m  example_tcp_callback.m  example_tcpsocket.m  example_xmat_format_file_load.m  example_xmat_format_file_save.m  example_xmat_tcp_client.m  example_xmat_tcp_server.m  matlab_samples.m  samples_all.m  samples_all_.m  samples_supported_types.m  xmat_0_client.m  xmat_0_server.m
python/: README.md  setup.py
python/examples/: 0_client.py  0_server.py  common.py  example_network_1_client.py  example_network_1_server.py  example_xmat_format_file_load.py  example_xmat_format_file_save.py  example_xmat_tcp_client.py  example_xmat_tcp_server.py  samples_0.py
python/xmat/: __init__.py  __main__.py  benchmark.py  datastream.py  tcpsocket.py
